--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
         "symfony/translation": "7.3.*",
         "symfony/twig-bundle": "7.3.*",
         "symfony/ux-turbo": "^2.28",
+        "symfony/ux-vue": "^2.29",
         "symfony/validator": "7.3.*",
         "symfony/web-link": "7.3.*",
         "symfony/webpack-encore-bundle": "^2.2",
