--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "@babel/preset-env": "^7.16.0",
         "@symfony/webpack-encore": "^5.1.0",
         "core-js": "^3.38.0",
+        "file-loader": "^6.0.0",
         "regenerator-runtime": "^0.13.9",
         "webpack": "^5.74.0",
         "webpack-cli": "^5.1.0"
@@ -17,8 +18,15 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^7.0.0",
+        "@fortawesome/fontawesome-svg-core": "^7.0.0",
+        "@fortawesome/free-solid-svg-icons": "^7.0.0",
+        "@fortawesome/vue-fontawesome": "^3.1.1",
+        "@symfony/ux-vue": "^2.29.1",
         "@vue/compiler-sfc": "^3.5.18",
+        "chart.js": "^3.9.1",
         "vue": "3",
+        "vue-chartjs": "4",
         "vue-loader": "^17.0.0"
     }
 }
