--- a/package.json
+++ b/package.json
@@ -24,7 +24,13 @@
         "@fortawesome/vue-fontawesome": "^3.1.1",
         "@symfony/ux-vue": "^2.29.1",
         "@vue/compiler-sfc": "^3.5.18",
+        "bootstrap-icons": "^1.13.1",
         "chart.js": "^3.9.1",
+        "datatables.net": "^2.3.2",
+        "datatables.net-bs5": "^2.3.2",
+        "datatables.net-responsive": "^3.0.5",
+        "datatables.net-responsive-bs5": "^3.0.5",
+        "jquery": "^3.7.1",
         "vue": "3",
         "vue-chartjs": "4",
         "vue-loader": "^17.0.0"
