--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
         "jquery": "^3.7.1",
         "vue": "3",
         "vue-chartjs": "4",
-        "vue-loader": "^17.0.0"
+        "vue-loader": "^17.0.0",
+        "vue-star-rating": "^1.7.0",
+        "vue3-star-ratings": "^3.0.5"
     }
 }
