--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,9 +1,8 @@
-# .github/workflows/ci-cd.yml
-name: CI/CD Pipeline
+name: CI/CD Pipeline - Vivetic RH Platform
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, develop, feature/* ]
   pull_request:
     branches: [ main, develop ]
 
@@ -12,154 +11,315 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  # Job de tests et validation
-  test-and-build:
+  # ========================================
+  # JOB 1: Tests Backend (Symfony)
+  # ========================================
+  backend-tests:
+    name: Backend - Tests & Quality
     runs-on: ubuntu-latest
+    
     services:
       postgres:
-        image: postgres:15-alpine
+        image: postgres:16-alpine
         env:
-          POSTGRES_DB: rh_platform_test
-          POSTGRES_USER: test_user
-          POSTGRES_PASSWORD: test_password
+          POSTGRES_DB: vivetic_rh_test
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres123
+        ports:
+          - 5432:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-        ports:
-          - 5432:5432
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: '8.2'
-        extensions: pdo, pdo_pgsql, pgsql, gd, soap
-        coverage: xdebug
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
+          extensions: mbstring, xml, ctype, iconv, intl, pdo, pdo_pgsql
+          coverage: xdebug
+          tools: composer:v2
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
-        cache: 'npm'
-        cache-dependency-path: frontend/package-lock.json
+      - name: Get Composer cache directory
+        id: composer-cache
+        run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
+        working-directory: ./backend
 
-    - name: Install Backend dependencies
-      run: |
-        cd backend
-        composer install --prefer-dist --no-progress --no-interaction
+      - name: Cache Composer dependencies
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
+          restore-keys: ${{ runner.os }}-composer-
 
-    - name: Install Frontend dependencies
-      run: |
-        cd frontend
-        npm ci
+      - name: Install dependencies
+        run: composer install --prefer-dist --no-progress --no-suggest
+        working-directory: ./backend
 
-    - name: Run PHPStan
-      run: |
-        cd backend
-        composer phpstan
+      - name: Create JWT keys
+        run: |
+          mkdir -p config/jwt
+          openssl genpkey -algorithm RSA -out config/jwt/private.pem -pkeyopt rsa_keygen_bits:4096
+          openssl rsa -pubout -in config/jwt/private.pem -out config/jwt/public.pem
+        working-directory: ./backend
 
-    - name: Run PHPUnit tests
-      run: |
-        cd backend
-        SYMFONY_DEPRECATIONS_HELPER=disabled vendor/bin/phpunit --coverage-clover=coverage.xml
-      env:
-        DATABASE_URL: postgresql://test_user:test_password@localhost:5432/rh_platform_test
-        APP_ENV: test
-        JWT_SECRET: test_jwt_secret_123456
+      - name: Setup database
+        env:
+          DATABASE_URL: postgresql://postgres:postgres123@localhost:5432/vivetic_rh_test
+        run: |
+          php bin/console doctrine:database:create --if-not-exists --env=test
+          php bin/console doctrine:schema:create --env=test
+        working-directory: ./backend
 
-    - name: Upload PHP coverage to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        file: ./backend/coverage.xml
-        flags: unittests
+      - name: Run PHPUnit tests
+        env:
+          DATABASE_URL: postgresql://postgres:postgres123@localhost:5432/vivetic_rh_test
+        run: php bin/phpunit --coverage-clover coverage.xml
+        working-directory: ./backend
 
-    - name: Run ESLint
-      run: |
-        cd frontend
-        npm run lint
+      - name: Run PHPStan (Static Analysis)
+        run: vendor/bin/phpstan analyse src --level=8 --no-progress
+        working-directory: ./backend
+        continue-on-error: true
 
-    - name: Run Frontend tests
-      run: |
-        cd frontend
-        npm run test:unit
+      - name: Run PHP CodeSniffer
+        run: vendor/bin/phpcs src --standard=PSR12 --report=summary
+        working-directory: ./backend
+        continue-on-error: true
 
-    - name: Build Frontend
-      run: |
-        cd frontend
-        npm run build
+      - name: Upload coverage reports
+        uses: codecov/codecov-action@v3
+        with:
+          file: ./backend/coverage.xml
+          flags: backend
+          name: backend-coverage
 
-    - name: Login to GitHub Container Registry
-      if: github.event_name == 'push'
-      uses: docker/login-action@v2
-      with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+  # ========================================
+  # JOB 2: Tests Frontend (Vue.js)
+  # ========================================
+  frontend-tests:
+    name: Frontend - Tests & Quality
+    runs-on: ubuntu-latest
 
-    - name: Build and push Backend Docker image
-      if: github.event_name == 'push'
-      uses: docker/build-push-action@v4
-      with:
-        context: ./backend
-        file: ./backend/Dockerfile
-        push: true
-        tags: |
-          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-backend:latest
-          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-backend:${{ github.sha }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Build and push Frontend Docker image
-      if: github.event_name == 'push'
-      uses: docker/build-push-action@v4
-      with:
-        context: ./frontend
-        file: ./frontend/Dockerfile
-        push: true
-        tags: |
-          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-frontend:latest
-          ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-frontend:${{ github.sha }}
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: ./frontend/package-lock.json
 
-  # Job de déploiement en staging
+      - name: Install dependencies
+        run: npm ci
+        working-directory: ./frontend
+
+      - name: Run ESLint
+        run: npm run lint
+        working-directory: ./frontend
+        continue-on-error: true
+
+      - name: Run unit tests
+        run: npm run test:unit
+        working-directory: ./frontend
+        continue-on-error: true
+
+      - name: Build application
+        run: npm run build
+        working-directory: ./frontend
+        env:
+          VITE_API_URL: http://localhost:8000
+
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: frontend-dist
+          path: ./frontend/dist
+          retention-days: 1
+
+  # ========================================
+  # JOB 3: Security Scan
+  # ========================================
+  security-scan:
+    name: Security Vulnerability Scan
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'fs'
+          scan-ref: '.'
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+
+      - name: Upload Trivy results to GitHub Security
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: 'trivy-results.sarif'
+
+  # ========================================
+  # JOB 4: Build Docker Images
+  # ========================================
+  build-images:
+    name: Build & Push Docker Images
+    runs-on: ubuntu-latest
+    needs: [backend-tests, frontend-tests]
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
+    
+    permissions:
+      contents: read
+      packages: write
+
+    strategy:
+      matrix:
+        service: [backend, frontend]
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-${{ matrix.service }}
+          tags: |
+            type=ref,event=branch
+            type=sha,prefix={{branch}}-
+            type=raw,value=latest,enable={{is_default_branch}}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./${{ matrix.service }}/Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  # ========================================
+  # JOB 5: Deploy to Staging
+  # ========================================
   deploy-staging:
+    name: Deploy to Staging
     runs-on: ubuntu-latest
-    needs: test-and-build
+    needs: build-images
     if: github.ref == 'refs/heads/develop'
-    
-    steps:
-    - name: Deploy to staging
-      uses: appleboy/ssh-action@v0.1.10
-      with:
-        host: ${{ secrets.STAGING_HOST }}
-        username: ${{ secrets.STAGING_USER }}
-        key: ${{ secrets.STAGING_SSH_KEY }}
-        script: |
-          cd /opt/rh-platform
-          docker-compose pull
-          docker-compose up -d
-          docker system prune -f
+    environment:
+      name: staging
+      url: https://staging.vivetic-rh.com
 
-  # Job de déploiement en production
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Deploy to staging server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.STAGING_HOST }}
+          username: ${{ secrets.STAGING_USER }}
+          key: ${{ secrets.STAGING_SSH_KEY }}
+          script: |
+            cd /opt/vivetic-rh
+            docker-compose pull
+            docker-compose up -d
+            docker-compose exec -T backend php bin/console doctrine:migrations:migrate --no-interaction
+            docker-compose exec -T backend php bin/console cache:clear
+
+  # ========================================
+  # JOB 6: Deploy to Production
+  # ========================================
   deploy-production:
+    name: Deploy to Production
     runs-on: ubuntu-latest
-    needs: test-and-build
+    needs: build-images
     if: github.ref == 'refs/heads/main'
-    
-    steps:
-    - name: Approve production deployment
-      run: echo "Deployment to production requires manual approval"
+    environment:
+      name: production
+      url: https://vivetic-rh.com
 
-    - name: Deploy to production
-      uses: appleboy/ssh-action@v0.1.10
-      with:
-        host: ${{ secrets.PRODUCTION_HOST }}
-        username: ${{ secrets.PRODUCTION_USER }}
-        key: ${{ secrets.PRODUCTION_SSH_KEY }}
-        script: |
-          cd /opt/rh-platform
-          docker-compose pull
-          docker-compose up -d
-          docker system prune -f
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Create deployment
+        uses: chrnorm/deployment-action@v2
+        id: deployment
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          environment: production
+
+      - name: Deploy to production server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.PROD_HOST }}
+          username: ${{ secrets.PROD_USER }}
+          key: ${{ secrets.PROD_SSH_KEY }}
+          script: |
+            cd /opt/vivetic-rh
+            docker-compose pull
+            docker-compose up -d
+            docker-compose exec -T backend php bin/console doctrine:migrations:migrate --no-interaction
+            docker-compose exec -T backend php bin/console cache:clear --env=prod
+
+      - name: Update deployment status (success)
+        if: success()
+        uses: chrnorm/deployment-status@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          deployment-id: ${{ steps.deployment.outputs.deployment_id }}
+          state: success
+
+      - name: Update deployment status (failure)
+        if: failure()
+        uses: chrnorm/deployment-status@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          deployment-id: ${{ steps.deployment.outputs.deployment_id }}
+          state: failure
+
+  # ========================================
+  # JOB 7: Notification
+  # ========================================
+  notify:
+    name: Send Notifications
+    runs-on: ubuntu-latest
+    needs: [deploy-staging, deploy-production]
+    if: always()
+
+    steps:
+      - name: Send Slack notification
+        uses: 8398a7/action-slack@v3
+        if: always()
+        with:
+          status: ${{ job.status }}
+          text: |
+            Deployment ${{ job.status }}!
+            Branch: ${{ github.ref }}
+            Commit: ${{ github.sha }}
+          webhook_url: ${{ secrets.SLACK_WEBHOOK }}
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
