--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,33 +1,41 @@
 {
-  "name": "front",
-  "version": "0.0.0",
+  "name": "vivetic-rh-frontend",
+  "version": "1.0.0",
   "private": true,
-  "type": "module",
-  "engines": {
-    "node": "^20.19.0 || >=22.12.0"
-  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "format": "prettier --write src/"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "lint:check": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --ignore-path .gitignore",
+    "format": "prettier --write src/",
+    "format:check": "prettier --check src/",
+    "test:unit": "vitest --run",
+    "test:unit:watch": "vitest",
+    "test:coverage": "vitest --coverage",
+    "test:e2e": "cypress run",
+    "test:e2e:open": "cypress open",
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^7.0.1",
-    "@fortawesome/free-solid-svg-icons": "^7.0.1",
-    "@fortawesome/vue-fontawesome": "^3.1.1",
-    "axios": "^1.11.0",
-    "bootstrap": "^5.3.8",
-    "chart.js": "^4.5.0",
-    "pinia": "^3.0.3",
-    "vue": "^3.5.18",
-    "vue-chartjs": "^5.3.2",
-    "vue-router": "^4.5.1"
+    "vue": "^3.3.0",
+    "vue-router": "^4.2.0",
+    "pinia": "^2.1.0",
+    "axios": "^1.6.0",
+    "chart.js": "^4.4.0",
+    "vue-chartjs": "^5.2.0",
+    "lucide-vue-next": "^0.263.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^6.0.1",
-    "prettier": "3.6.2",
-    "vite": "^7.0.6",
-    "vite-plugin-vue-devtools": "^8.0.0"
+    "@vitejs/plugin-vue": "^4.5.0",
+    "vite": "^5.0.0",
+    "eslint": "^8.55.0",
+    "eslint-plugin-vue": "^9.19.0",
+    "prettier": "^3.1.0",
+    "vitest": "^1.0.0",
+    "@vue/test-utils": "^2.4.0",
+    "cypress": "^13.6.0",
+    "typescript": "^5.3.0",
+    "vue-tsc": "^1.8.0"
   }
 }
