--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,15 +24,16 @@
     "axios": "^1.6.0",
     "chart.js": "^4.4.0",
     "vue-chartjs": "^5.2.0",
-    "lucide-vue-next": "^0.263.1"
+    "lucide-vue-next": "^0.263.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^6.0.0",
-    "vite": "^5.0.0",
+    "vite": "^7.1.12",
+    "@vitejs/plugin-vue": "^7.2.0",
+    "vite-plugin-vue-devtools": "^8.0.1",
     "eslint": "^8.55.0",
     "eslint-plugin-vue": "^9.19.0",
     "prettier": "^3.1.0",
-    "vitest": "^1.0.0",
+    "vitest": "^1.2.0",
     "@vue/test-utils": "^2.4.0",
     "cypress": "^13.6.0",
     "typescript": "^5.3.0",
