--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,25 +18,25 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "vue": "^3.3.0",
-    "vue-router": "^4.2.0",
-    "pinia": "^2.1.0",
     "axios": "^1.6.0",
     "chart.js": "^4.4.0",
+    "lucide-vue-next": "^0.263.0",
+    "pinia": "^2.1.0",
+    "vue": "^3.3.0",
     "vue-chartjs": "^5.2.0",
-    "lucide-vue-next": "^0.263.0"
+    "vue-router": "^4.2.0"
   },
   "devDependencies": {
-    "vite": "^5.4.21",
     "@vitejs/plugin-vue": "^6.0.1",
-    "vite-plugin-vue-devtools": "^8.0.1",
+    "@vue/test-utils": "^2.4.0",
+    "cypress": "^13.6.0",
     "eslint": "^8.55.0",
     "eslint-plugin-vue": "^9.19.0",
     "prettier": "^3.1.0",
-    "vitest": "^1.2.0",
-    "@vue/test-utils": "^2.4.0",
-    "cypress": "^13.6.0",
     "typescript": "^5.3.0",
+    "vite": "^7.1.12",
+    "vite-plugin-vue-devtools": "^8.0.3",
+    "vitest": "^1.2.0",
     "vue-tsc": "^1.8.0"
   }
 }
