--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,9 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/vue-fontawesome": "^3.1.2",
     "axios": "^1.6.0",
     "chart.js": "^4.4.0",
     "lucide-vue-next": "^0.263.0",
@@ -28,13 +31,12 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
-    "@vue/test-utils": "^2.4.0",
     "cypress": "^13.6.0",
     "eslint": "^8.55.0",
     "eslint-plugin-vue": "^9.19.0",
     "prettier": "^3.1.0",
     "typescript": "^5.3.0",
-    "vite": "^7.3.0",
+    "vite": "^7.1.12",
     "vite-plugin-vue-devtools": "^8.0.3",
     "vitest": "^1.2.0",
     "vue-tsc": "^1.8.0"
