test build back

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -26,10 +26,10 @@ COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 # Copier le code backend
 COPY backend/ .
 
-COPY backend/.env .env
-
 # Définir l'environnement Symfony
 ENV APP_ENV=dev
+
+COPY backend/.env.prod .env
 
 # Installer les dépendances PHP
 RUN composer install
