--- a/backend/config/packages/security.yaml
+++ b/backend/config/packages/security.yaml
@@ -1,4 +1,3 @@
-# config/packages/security.yaml
 security:
     password_hashers:
         App\Entity\User:
@@ -47,10 +46,9 @@ security:
         # Routes utilisateur standard
         - { path: ^/api/user, roles: ROLE_USER }
         
-        # Toutes les autres routes API nécessitent une authentification
+        # Toutes les autres routes API nécessitent une authentification complète
         - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
 
-    # Hiérarchie des rôles - Les rôles supérieurs héritent des permissions
     role_hierarchy:
         ROLE_RH_ADMIN: [ROLE_MANAGER, ROLE_USER]  # Admin RH a tous les droits
         ROLE_MANAGER: [ROLE_USER]                 # Manager hérite de USER
