--- a/backend/config/services.yaml
+++ b/backend/config/services.yaml
@@ -15,6 +15,9 @@ services:
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
+    App\EventListener\CheckUserStatusListener:
+        tags:
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_authentication_success, method: onAuthenticationSuccess }
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
