--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,8 @@
     "pinia": "^2.1.0",
     "vue": "^3.3.0",
     "vue-chartjs": "^5.2.0",
-    "vue-router": "^4.2.0"
+    "vue-router": "^4.2.0",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
