--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,9 +26,11 @@
     "chart.js": "^4.4.0",
     "lucide-vue-next": "^0.263.0",
     "pinia": "^2.1.0",
+    "sweetalert2": "^11.26.3",
     "vue": "^3.3.0",
     "vue-chartjs": "^5.2.0",
     "vue-router": "^4.2.0",
+    "vue-sweetalert2": "^5.0.11",
     "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
