--- a/backend/config/services.yaml
+++ b/backend/config/services.yaml
@@ -18,6 +18,8 @@ services:
     App\EventListener\CheckUserStatusListener:
         tags:
             - { name: kernel.event_listener, event: lexik_jwt_authentication.on_authentication_success, method: onAuthenticationSuccess }
-
+    App\EventListener\JWTCreatedListener:
+        tags:
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_jwt_created, method: onJWTCreated }
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
