--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -164,13 +164,11 @@ jobs:
           retention-days: 1
 
   # ========================================
-  # JOB 3: Security Scan
+  # JOB 3: Security Scan (optionnel)
   # ========================================
   security-scan:
     name: Security Vulnerability Scan
     runs-on: ubuntu-latest
-    permissions:
-      security-events: write
     
     steps:
       - name: Checkout code
@@ -190,18 +188,13 @@ jobs:
           sarif_file: 'trivy-results.sarif'
 
   # ========================================
-  # JOB 4: Build Docker Images
+  # JOB 4: Build Docker Images (local)
   # ========================================
   build-images:
-    name: Build & Push Docker Images
+    name: Build Docker Images Locally
     runs-on: ubuntu-latest
     needs: [backend-tests, frontend-tests]
-    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
     
-    permissions:
-      contents: read
-      packages: write
-
     strategy:
       matrix:
         service: [backend, frontend]
@@ -213,134 +206,45 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-${{ matrix.service }}
-          tags: |
-            type=ref,event=branch
-            type=sha,prefix={{branch}}-
-            type=raw,value=latest,enable={{is_default_branch}}
-
-      - name: Build and push Docker image
+      - name: Build Docker image locally
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ./${{ matrix.service }}/Dockerfile
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-  # # ========================================
-  # # JOB 5: Deploy to Staging
-  # # ========================================
-  # deploy-staging:
-  #   name: Deploy to Staging
-  #   runs-on: ubuntu-latest
-  #   needs: build-images
-  #   if: github.ref == 'refs/heads/develop'
-  #   environment:
-  #     name: staging
-  #     url: https://staging.vivetic-rh.com
-
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
-
-  #     - name: Deploy to staging server
-  #       uses: appleboy/ssh-action@master
-  #       with:
-  #         host: ${{ secrets.STAGING_HOST }}
-  #         username: ${{ secrets.STAGING_USER }}
-  #         key: ${{ secrets.STAGING_SSH_KEY }}
-  #         script: |
-  #           cd /opt/vivetic-rh
-  #           docker-compose pull
-  #           docker-compose up -d
-  #           docker-compose exec -T backend php bin/console doctrine:migrations:migrate --no-interaction
-  #           docker-compose exec -T backend php bin/console cache:clear
-
-  # # ========================================
-  # # JOB 6: Deploy to Production
-  # # ========================================
-  # deploy-production:
-  #   name: Deploy to Production
-  #   runs-on: ubuntu-latest
-  #   needs: build-images
-  #   if: github.ref == 'refs/heads/main'
-  #   environment:
-  #     name: production
-  #     url: https://vivetic-rh.com
-
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v4
-
-  #     - name: Create deployment
-  #       uses: chrnorm/deployment-action@v2
-  #       id: deployment
-  #       with:
-  #         token: ${{ secrets.GITHUB_TOKEN }}
-  #         environment: production
-
-  #     - name: Deploy to production server
-  #       uses: appleboy/ssh-action@master
-  #       with:
-  #         host: ${{ secrets.PROD_HOST }}
-  #         username: ${{ secrets.PROD_USER }}
-  #         key: ${{ secrets.PROD_SSH_KEY }}
-  #         script: |
-  #           cd /opt/vivetic-rh
-  #           docker-compose pull
-  #           docker-compose up -d
-  #           docker-compose exec -T backend php bin/console doctrine:migrations:migrate --no-interaction
-  #           docker-compose exec -T backend php bin/console cache:clear --env=prod
-
-  #     - name: Update deployment status (success)
-  #       if: success()
-  #       uses: chrnorm/deployment-status@v2
-  #       with:
-  #         token: ${{ secrets.GITHUB_TOKEN }}
-  #         deployment-id: ${{ steps.deployment.outputs.deployment_id }}
-  #         state: success
-
-  #     - name: Update deployment status (failure)
-  #       if: failure()
-  #       uses: chrnorm/deployment-status@v2
-  #       with:
-  #         token: ${{ secrets.GITHUB_TOKEN }}
-  #         deployment-id: ${{ steps.deployment.outputs.deployment_id }}
-          # state: failure
+          push: false
+          tags: ${{ env.IMAGE_NAME }}-${{ matrix.service }}:latest
 
   # ========================================
-  # JOB 7: Notification
+  # JOB 5: Notification (simplifiée)
   # ========================================
   notify:
-    name: Send Notifications
+    name: Pipeline finished
     runs-on: ubuntu-latest
-    needs: [deploy-staging, deploy-production]
-    if: always()
-
+    needs: [build-images]
     steps:
-      - name: Send Slack notification
-        uses: 8398a7/action-slack@v3
-        if: always()
-        with:
-          status: ${{ job.status }}
-          text: |
-            Deployment ${{ job.status }}!
-            Branch: ${{ github.ref }}
-            Commit: ${{ github.sha }}
-          webhook_url: ${{ secrets.SLACK_WEBHOOK }}
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
+      - run: echo "CI/CD pipeline terminé pour la branche ${{ github.ref }}"
+
+# ========================================
+# Jobs de déploiement (commentés pour usage local)
+# ========================================
+# deploy-staging:
+#   name: Deploy to Staging
+#   runs-on: ubuntu-latest
+#   needs: build-images
+#   if: github.ref == 'refs/heads/develop'
+#   environment:
+#     name: staging
+#     url: https://staging.vivetic-rh.com
+#   steps:
+#     ...
+
+# deploy-production:
+#   name: Deploy to Production
+#   runs-on: ubuntu-latest
+#   needs: build-images
+#   if: github.ref == 'refs/heads/main'
+#   environment:
+#     name: production
+#     url: https://vivetic-rh.com
+#   steps:
+#     ...
