--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -203,6 +203,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set lowercase image name
+        id: image-name
+        run: echo "IMAGE_NAME_LOWER=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -212,8 +216,8 @@ jobs:
           context: .
           file: ./${{ matrix.service }}/Dockerfile
           push: false
-          tags: ${{ env.IMAGE_NAME }}-${{ matrix.service }}:latest
-
+          tags: ${{ env.IMAGE_NAME_LOWER }}-${{ matrix.service }}:latest
+          
   # ========================================
   # JOB 5: Notification (simplifiée)
   # ========================================
