--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,10 +34,11 @@
     "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.28.5",
     "@vitejs/plugin-vue": "^6.0.1",
     "cypress": "^13.6.0",
-    "eslint": "^8.55.0",
-    "eslint-plugin-vue": "^9.19.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-vue": "^9.33.0",
     "prettier": "^3.1.0",
     "typescript": "^5.3.0",
     "vite": "^7.1.12",
