--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -99,7 +99,10 @@ jobs:
         working-directory: ./backend
         env:
           DATABASE_URL: postgresql://postgres:postgres123@localhost:5432/vivetic_rh_test
-        run: php bin/phpunit --coverage-clover coverage.xml
+        run: |
+          chmod +x bin/phpunit
+          php ./bin/phpunit --coverage-clover coverage.xml
+
 
       - name: Run PHPStan (Static Analysis)
         working-directory: ./backend
