--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -101,10 +101,10 @@ jobs:
       #   run: vendor/bin/phpstan analyse src --level=8 --no-progress
       #   continue-on-error: true
 
-      - name: Run PHP CodeSniffer
-        working-directory: ./backend
-        run: vendor/bin/phpcs src --standard=PSR12 --report=summary
-        continue-on-error: true
+      # - name: Run PHP CodeSniffer
+      #   working-directory: ./backend
+      #   run: vendor/bin/phpcs src --standard=PSR12 --report=summary
+      #   continue-on-error: true
 
       - name: Upload coverage reports
         uses: codecov/codecov-action@v3
